add google verification

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -36,6 +36,9 @@
 <!-- JQuery -->
 {% include scripts/jquery.html %}
 
+<!-- google search verification -->
+<meta name="google-site-verification" content="EKLAf1jcLYLsIaCYm6bx0B6wf1e5-Yr6I0aeZngr5QM" />
+
 <!-- Theming-->
 {% if site.enable_darkmode %}
   {% unless page.force_white %}
