--- a/_includes/selected_papers.html
+++ b/_includes/selected_papers.html
@@ -3,6 +3,6 @@
             <h2>selected publications</h2>
             {% bibliography -f papers -q @*[selected=true]* %}
           </div>
-          For more publications, please refer to <a href="https://tingtingliang.github.io/publications/">publications</a>!<br>
+          For more publications, please refer to <a href="https://tingtingliangvs.github.io/publications/">publications</a>!<br>
 
           Contact: tingtingliang AT pku.edu.cn
